SERVER-24275 Use enableBSON1_1 parameter to control KeyString version.

If the "enableBSON1_1" server paramter is set to true, then KeyString v1
is used for newly created indexes on the wiredTiger storage engine.

Otherwise, if the "enableBSON1_1" server parameter is set to false, then
KeyString v0 is used for newly created indexes on the wiredTiger storage
engine.